--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: #f5f5f5;
 }
 
 .container {
@@ -11,14 +12,14 @@ body {
 }
 
 header {
-  background-color: #f5f5f5;
   padding: 20px;
-  border-bottom: 1px solid #ddd;
 }
 
 .content {
-  flex: 1;
+  min-height: 850px;
   display: flex;
+  border: 1px solid #ddd;
+  background-color: white;
 }
 
 .result-list {
